# LogisticSaaS

./: .env.example  .gitignore  Makefile  README.md  arquitetura-togaf.md  arquitetura.md  base-de-dados.md  build_log.txt  docker-compose.yml  filtered_log.txt  frontend_build.txt  historias.md  implementation_plan.md  logs.txt  order_logs.txt  order_logs_ascii.txt  prototipo.js  requisitos.md
.claude/: settings.json  settings.local.json
docs-site/: .dockerignore  Dockerfile  docusaurus.config.ts  package-lock.json
docs-site/docs/: arquitetura-principal.md  arquitetura-togaf.md  base-de-dados.md  conexoes.md  contribuicao-backend.md  frontend.md  gateway-api.md  requisitos.md  servicos.md
services/catalog-service/: Dockerfile  Models.cs  Program.cs  catalog-service.csproj
services/frontend/: .env.local.example  Dockerfile  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
services/gateway/: Dockerfile  package-lock.json  package.json
services/ingestion/: Dockerfile  pom.xml
services/order-service/: Dockerfile  OrderService.csproj  Program.cs  build_output.txt  build_utf8.txt  build_utf8_2.txt  build_utf8_3.txt
services/pricing-solver/: CMakeLists.txt  Dockerfile  build_log.txt  build_log2.txt  build_log3.txt  config.template.json
services/pricing-solver/src/: KafkaConsumerService.cc  KafkaConsumerService.h  PricingController.cc  PricingController.h  main.cc
services/pricing-solver/src/controllers/: PricingController.cc  PricingController.h  PricingRulesController.cc  PricingRulesController.h
supabase/: seed.sql
supabase/migrations/: 001_pricing_schema.sql  002_orders_schema.sql  003_audit_schema.sql  004_pricing_rules_solver_columns.sql
(+49 files in other folders)
